--- a/jQ2-2.html
+++ b/jQ2-2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="JS任务3.css">
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="JQ2-2.js" async></script>
+<script src="jQ2-2.js" async></script>
 
     <title>Document</title>
 </head>
